--- a/packages/screeps-server/config.yml
+++ b/packages/screeps-server/config.yml
@@ -41,7 +41,201 @@ serverConfig:
   socketUpdateRate: 200
   shardName: "test"
   welcomeText: |
-    <h1 style="text-align: center;">My Cool Server</h1>
+    <div style="
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      background: radial-gradient(circle at top, #12192f 0, #050810 60%);
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+      color: #e3f2fd;
+      padding: 24px;
+      text-align: center;
+    ">
+
+      <div style="
+        max-width: 700px;
+        width: 100%;
+        background: linear-gradient(145deg, #0c101b, #050814);
+        border-radius: 18px;
+        border: 1px solid rgba(255,255,255,0.06);
+        padding: 40px 36px;
+        box-shadow: 0 0 40px rgba(0,0,0,0.7), 0 0 40px rgba(53,255,155,0.1);
+        position: relative;
+        overflow: hidden;
+      ">
+
+        <div style="
+          display: inline-flex;
+          align-items: center;
+          gap: 8px;
+          font-size: 12px;
+          letter-spacing: 0.1em;
+          text-transform: uppercase;
+          color: #78839c;
+          border: 1px solid rgba(255,255,255,0.06);
+          background: rgba(5,8,16,0.9);
+          padding: 4px 12px;
+          border-radius: 999px;
+          margin-bottom: 18px;
+        ">
+          <span style="
+            width: 6px;
+            height: 6px;
+            border-radius: 50%;
+            background: #35ff9b;
+            box-shadow: 0 0 12px #35ff9b;
+          "></span>
+          Private Screeps Shard
+        </div>
+
+        <h1 style="
+          font-size: clamp(2.1rem, 3vw, 2.6rem);
+          letter-spacing: 0.04em;
+          text-transform: uppercase;
+          margin-bottom: 8px;
+        ">screeps.nyphon.de</h1>
+
+        <p style="
+          font-size: 15px;
+          color: #78839c;
+          margin-bottom: 32px;
+        ">
+          A small, not-so-quiet corner of the Screeps universe. BYO AI.
+        </p>
+
+        <div style="
+          display: grid;
+          grid-template-columns: 2fr 1.4fr;
+          gap: 28px;
+          text-align: left;
+          margin-bottom: 24px;
+        ">
+
+          <div>
+            <div style="
+              font-size: 14px;
+              letter-spacing: 0.14em;
+              text-transform: uppercase;
+              color: #78839c;
+              margin-bottom: 14px;
+            ">Welcome, process</div>
+
+            <p style="
+              font-size: 15px;
+              line-height: 1.5;
+              color: #c8d3f5;
+              margin-bottom: 20px;
+            ">
+              This is a private Screeps server for experiments, weird AIs and
+              the occasional catastrophic refactor. If you ended up here,
+              you probably know what you are doing. Probably.
+            </p>
+
+            <ul style="list-style: none; padding: 0; margin:0; color: #a6b3d9; font-size: 14px;">
+              <li style="margin-bottom: 8px; display: flex; gap: 8px;">
+                <span style="color:#35ff9b;">▸</span>
+                Sandbox for bots, strategies and <em>highly questionable</em> optimizations.
+              </li>
+              <li style="margin-bottom: 8px; display: flex; gap: 8px;">
+                <span style="color:#35ff9b;">▸</span>
+                Perfect for long-running simulations and “just one more rewrite”.
+              </li>
+              <li style="display: flex; gap: 8px;">
+                <span style="color:#35ff9b;">▸</span>
+                No public rankings, only logs that silently judge you.
+              </li>
+            </ul>
+          </div>
+
+          <div style="text-align:center;">
+            <div style="
+              font-size: 14px;
+              letter-spacing: 0.14em;
+              text-transform: uppercase;
+              color: #78839c;
+              margin-bottom: 14px;
+            ">Server status</div>
+
+            <div style="
+              background: radial-gradient(circle at top left, rgba(53,255,155,0.15), #050814);
+              border: 1px solid rgba(53,255,155,0.2);
+              border-radius: 14px;
+              padding: 14px 18px;
+              margin-bottom: 18px;
+              box-shadow: 0 0 16px rgba(53,255,155,0.25);
+            ">
+              <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:6px;">
+                <span style="font-size:12px; letter-spacing:0.16em; text-transform:uppercase; color:#78839c;">Instance</span>
+                <span style="
+                  font-size:15px;
+                  font-weight:500;
+                  color:#35ff9b;
+                  display:flex;
+                  align-items:center;
+                  gap:6px;
+                ">
+                  <span style="
+                    width: 8px;
+                    height: 8px;
+                    background:#35ff9b;
+                    border-radius:50%;
+                    box-shadow: 0 0 12px #35ff9b;
+                    position:relative;
+                  "></span>
+                  Online
+                </span>
+              </div>
+              <div style="font-size:11px; display:flex; justify-content:space-between; gap:8px;">
+                <span>Host: <strong style="color:#d0dcff;">screeps.nyphon.de</strong></span>
+                <span>Protocol: <strong style="color:#d0dcff;">WS / HTTP</strong></span>
+              </div>
+            </div>
+
+            <div style="
+              font-family:'SF Mono', ui-monospace, Menlo, Monaco, 'Courier New', monospace;
+              font-size:13px;
+              padding:4px 10px;
+              border-radius:999px;
+              background:rgba(3,252,140,0.06);
+              border:1px solid rgba(3,252,140,0.2);
+              color:#35ff9b;
+              display:inline-block;
+              margin:0 auto 14px;
+            ">screeps.nyphon.de</div>
+
+            <p style="
+              font-size:12px;
+              color:#78839c;
+              opacity:0.8;
+            ">
+              If you do not have credentials yet, contact the admin and
+              promise not to <code style="
+                font-size:12px;
+                padding:2px 6px;
+                border-radius:999px;
+                background:rgba(53,255,155,0.1);
+                border:1px solid rgba(53,255,155,0.3);
+                color:#35ff9b;
+              ">while(true)</code> the CPU.
+            </p>
+          </div>
+
+        </div>
+
+        <p style="
+          margin-top:28px;
+          font-size:12px;
+          color:#78839c;
+          opacity:0.75;
+        ">
+          Tip: Keep your bots polite. The ramparts remember.
+        </p>
+
+      </div>
+    </div>
+
   constants: {}
   gclToCPU: true
   maxCPU: 100
@@ -49,7 +243,10 @@ serverConfig:
   stepCPU: 10
 
 launcherOptions:
-  # If set, automatically ensures all mods are updated
-  autoUpdate: false
-  # If set, forward console messages to terminal
+  autoUpdate: true
   logConsole: true
+
+env:
+  backend:
+    MAPTOOL_USER: admin
+    MAPTOOL_PASS: ${process.env.MAPTOOL_PASS}
