--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: packages/screeeps-bot
+        working-directory: packages/screeps-bot
     env:
       CI: true
     steps:
@@ -18,7 +18,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version-file: packages/screeeps-bot/.nvmrc
+          node-version-file: packages/screeps-bot/.nvmrc
           cache: npm
 
       - name: Install dependencies
