--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       SCREEPS_PASS: ${{ secrets.SCREEPS_PASS }}
       SCREEPS_TOKEN: ${{ secrets.SCREEPS_TOKEN }}
       SCREEPS_PROTOCOL: ${{ vars.SCREEPS_PROTOCOL }}
-      SCREEPS_HOSTNAME: ${{ vars.SCREEPS_HOSTNAME }}
+      SCREEPS_HOSTNAME: ${{ vars.SCREEPS_HOST }}
       SCREEPS_PORT: ${{ vars.SCREEPS_PORT }}
       SCREEPS_PATH: ${{ vars.SCREEPS_PATH }}
       SCREEPS_BRANCH: ${{ vars.SCREEPS_BRANCH }}
