--- a/packages/screeps-bot/package.json
+++ b/packages/screeps-bot/package.json
@@ -8,9 +8,9 @@
     "build": "rollup -c",
     "push": "rollup -c --environment DEST:screeps",
     "test": "npm run test-unit",
-    "test-unit": "mocha test/unit/**/*.ts",
-    "test-integration": "echo 'See docs/in-depth/testing.md for instructions on enabling integration tests'",
-    "test:performance": "screeps-performance-server --botFilePath=dist",
+    "test:unit": "mocha test/unit/**/*.ts",
+    "test:integration": "echo 'See docs/in-depth/testing.md for instructions on enabling integration tests'",
+    "test:performance": "DOCKER_DEFAULT_PLATFORM=linux/amd64 screeps-performance-server --botFilePath=dist",
     "watch": "rollup -cw --environment DEST:screeps"
   },
   "repository": {
