--- a/.github/workflows/exporter-ci.yml
+++ b/.github/workflows/exporter-ci.yml
@@ -4,16 +4,23 @@ on:
   push:
     paths:
       - 'packages/screeps-graphite-exporter/**'
+      - 'packages/screeps-loki-exporter/**'
   pull_request:
     paths:
       - 'packages/screeps-graphite-exporter/**'
+      - 'packages/screeps-loki-exporter/**'
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        package:
+          - screeps-graphite-exporter
+          - screeps-loki-exporter
     defaults:
       run:
-        working-directory: packages/screeps-graphite-exporter
+        working-directory: packages/${{ matrix.package }}
     env:
       CI: true
     steps:
@@ -23,9 +30,9 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version-file: packages/screeps-graphite-exporter/.nvmrc
+          node-version-file: packages/${{ matrix.package }}/.nvmrc
           cache: npm
-          cache-dependency-path: packages/screeps-graphite-exporter/package-lock.json
+          cache-dependency-path: packages/${{ matrix.package }}/package-lock.json
 
       - name: Install dependencies
         run: npm ci
@@ -36,7 +43,7 @@ jobs:
       - name: Validate Docker build
         uses: docker/build-push-action@v5
         with:
-          context: packages/screeps-graphite-exporter
+          context: packages/${{ matrix.package }}
           push: false
           load: true
-          tags: screeps-graphite-exporter:ci
+          tags: ${{ matrix.package }}:ci
