--- a/.github/workflows/exporter-publish.yml
+++ b/.github/workflows/exporter-publish.yml
@@ -5,6 +5,7 @@ on:
   push:
     tags:
       - 'screeps-graphite-exporter-v*'
+      - 'screeps-loki-exporter-v*'
 
 jobs:
   docker:
@@ -12,9 +13,14 @@ jobs:
     permissions:
       contents: read
       packages: write
+    strategy:
+      matrix:
+        package:
+          - screeps-graphite-exporter
+          - screep-loki-exporter
     defaults:
       run:
-        working-directory: packages/screeps-graphite-exporter
+        working-directory: packages/${{ matrix.package }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -22,9 +28,9 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version-file: packages/screeps-graphite-exporter/.nvmrc
+          node-version-file: packages/${{ matrix.package }}/.nvmrc
           cache: npm
-          cache-dependency-path: packages/screeps-graphite-exporter/package-lock.json
+          cache-dependency-path: packages/${{ matrix.package }}/package-lock.json
 
       - name: Install dependencies
         run: npm ci
@@ -42,8 +48,8 @@ jobs:
       - name: Build and push image
         uses: docker/build-push-action@v5
         with:
-          context: packages/screeps-graphite-exporter
+          context: packages/${{ matrix.package }}
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/screeps-graphite-exporter:latest
-            ghcr.io/${{ github.repository_owner }}/screeps-graphite-exporter:${{ github.ref_type == 'tag' && github.ref_name || github.sha }}
+            ghcr.io/${{ github.repository_owner }}/${{ matrix.package }}:latest
+            ghcr.io/${{ github.repository_owner }}/${{ matrix.package }}:${{ github.ref_type == 'tag' && github.ref_name || github.sha }}
