--- a/.github/workflows/copilot-strategic-planner.yml
+++ b/.github/workflows/copilot-strategic-planner.yml
@@ -37,17 +37,17 @@ jobs:
       - name: Run strategic planning analysis
         uses: ./.github/actions/copilot-exec
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPO_NAME: "${{ github.repository }}"
           RUN_ID: "${{ github.run_id }}"
           RUN_URL: "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-          COPILOT_MCP_SCREEPS_TOKEN: ${{ secrets.COPILOT_MCP_SCREEPS_TOKEN }}
-          COPILOT_MCP_SCREEPS_HOST: ${{ vars.COPILOT_MCP_SCREEPS_HOST || 'screeps.com' }}
-          COPILOT_MCP_SCREEPS_SHARD: ${{ vars.COPILOT_MCP_SCREEPS_SHARD || 'shard3' }}
-          COPILOT_MCP_SCREEPS_DOCS_CACHE_TTL: ${{ vars.SCREEPS_DOCS_CACHE_TTL || '3600' }}
-          COPILOT_MCP_SCREEPS_WIKI_CACHE_TTL: ${{ vars.SCREEPS_WIKI_CACHE_TTL || '3600' }}
-          COPILOT_MCP_SCREEPS_TYPES_CACHE_TTL: ${{ vars.SCREEPS_TYPES_CACHE_TTL || '3600' }}
-          COPILOT_MCP_GRAFANA_SERVICE_ACCOUNT_TOKEN: ${{ secrets.COPILOT_MCP_SGRAFANA_SERVICE_ACCOUNT_TOKEN }}
+          SCREEPS_TOKEN: ${{ secrets.COPILOT_MCP_SCREEPS_TOKEN }}
+          SCREEPS_HOST: ${{ vars.COPILOT_MCP_SCREEPS_HOST || 'screeps.com' }}
+          SCREEPS_SHARD: ${{ vars.COPILOT_MCP_SCREEPS_SHARD || 'shard1' }}
+          SCREEPS_DOCS_CACHE_TTL: ${{ vars.SCREEPS_DOCS_CACHE_TTL || '3600' }}
+          SCREEPS_WIKI_CACHE_TTL: ${{ vars.SCREEPS_WIKI_CACHE_TTL || '3600' }}
+          SCREEPS_TYPES_CACHE_TTL: ${{ vars.SCREEPS_TYPES_CACHE_TTL || '3600' }}
+          GRAFANA_SERVICE_ACCOUNT_TOKEN: ${{ secrets.COPILOT_MCP_SGRAFANA_SERVICE_ACCOUNT_TOKEN }}
         with:
           copilot-token: ${{ secrets.COPILOT_TOKEN }}
           prompt-path: .github/agents/strategic-planner.agent.md
