--- a/.github/workflows/copilot-strategic-planner.yml
+++ b/.github/workflows/copilot-strategic-planner.yml
@@ -4,7 +4,7 @@ name: Copilot Strategic Planner
 on:
   schedule:
     # Run every 6 hours to analyze bot performance and create improvement roadmaps
-    - cron: "0 */6 * * *"
+    - cron: "0 0 * * *"
   workflow_dispatch:
     inputs:
       verbose:
