--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "build:utils": "npm run build -w @ralphschuler/screeps-utils",
     "build:pathfinding": "npm run build -w @ralphschuler/screeps-pathfinding",
     "build:remote-mining": "npm run build -w @ralphschuler/screeps-remote-mining",
-    "build:all": "npm run build:kernel && npm run build:stats && npm run build:console && npm run build:empire && npm run build:layouts && npm run build:intershard && npm run build:visuals && npm run build:roles && npm run build:spawn && npm run build:chemistry && npm run build:utils && npm run build:pathfinding && npm run build:remote-mining && npm run build:defense && npm run build:economy && npm run build && npm run build:exporters && npm run build:mcp && npm run build:mod && npm run build:tasks && npm run build:posis",
+    "build:all": "npm run build:kernel && npm run build:stats && npm run build:console && npm run build:empire && npm run build:layouts && npm run build:intershard && npm run build:visuals && npm run build:roles && npm run build:spawn && npm run build:chemistry && npm run build:utils && npm run build:pathfinding && npm run build:remote-mining && npm run build:defense && npm run build:economy && npm run build && npm run build:exporters && npm run build:mod && npm run build:tasks && npm run build:posis",
     "test": "npm test -w screeps-typescript-starter",
     "test:unit": "npm run test:unit -w screeps-typescript-starter",
     "test:integration": "npm run test:integration -w screeps-typescript-starter",
@@ -63,7 +63,7 @@
     "test:pathfinding": "npm test -w @ralphschuler/screeps-pathfinding",
     "test:remote-mining": "npm test -w @ralphschuler/screeps-remote-mining",
     "test:economy": "npm test -w @ralphschuler/screeps-economy",
-    "test:all": "npm run test && npm run test:kernel && npm run test:stats && npm run test:console && npm run test:empire && npm run test:layouts && npm run test:intershard && npm run test:visuals && npm run test:roles && npm run test:spawn && npm run test:chemistry && npm run test:defense && npm run test:economy && npm run test:mcp && npm run test:tasks && npm run test:posis && npm run test:utils && npm run test:pathfinding && npm run test:remote-mining",
+    "test:all": "npm run test && npm run test:kernel && npm run test:stats && npm run test:console && npm run test:empire && npm run test:layouts && npm run test:intershard && npm run test:visuals && npm run test:roles && npm run test:spawn && npm run test:chemistry && npm run test:defense && npm run test:economy && npm run test:tasks && npm run test:posis && npm run test:utils && npm run test:pathfinding && npm run test:remote-mining",
     "lint": "npm run lint -w screeps-typescript-starter",
     "push": "npm run push -w screeps-typescript-starter",
     "watch": "npm run watch -w screeps-typescript-starter",
